--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mitt": "^3.0.0",
     "mongoose": "^6.2.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
